<resources>
    <string name="app_name">DesignLoft</string>
    <string name="contacts_toolbar">Контакты</string>
    <string name="favorite">Избранное</string>
    <string name="my_design">Мой дизайн</string>
    <string name="create_design">Создай свой дизайн</string>

    <string name="product_buy_btn">Купить</string>
    <string name="product_title_description">Детали</string>
    <string name="product_size_title_height">высота см</string>
    <string name="product_size_title_width">ширина см</string>
    <string name="product_size_title_length">длина см</string>

    <string name="search_hint">Найти</string>

    <string name="filter_price_title">Цена ($)</string>
    <string name="filter_color_title">Цвет</string>
    <string name="filter_sort_by_price_title">Сортировать по цене</string>
    <string name="filter_height_title">Высота (см)</string>
    <string name="filter_width_title">Ширина (см)</string>
    <string name="filter_length_title">Длина (см)</string>
    <string name="filter_from_high">от высокой</string>
    <string name="filter_from_low">от низкой</string>
    <string name="filter_apply_btn">Применить</string>

    <string name="select_design_galery">Галерея</string>
    <string name="select_design_camera">Камера</string>
    <string name="select_design_template">Шаблон</string>
    <string name="select_design_ar">AR</string>
    <string name="select_design_title">Создать свой дизан</string>
    <string name="select_design_cancel">Отмена</string>
    <string name="select_design_no_permission">Разрешения не предоставлены!</string>

    <string name="fragment_camera_error_camera_message">Камера не найдена</string>
    <string name="fragment_camera_not_created_photo">Вы не сделали фото</string>
    <string name="fragment_camera_create_new_photo">Сделать/заменить фото</string>
    <string name="fragment_camera_choose_new_photo">Выбрать/заменить изображение</string>
    <string name="fragment_camera_complete">Готово</string>
    <string name="fragment_camera_not_choose_photo">Вы не выбрали фото</string>

    <string name="dressing_inventory">Инвентарь</string>
    <string name="dressing_catalog">Каталог</string>
    <string name="dressing_save">Сохранить</string>
    <string name="dressing_favorite">Избранное</string>
    <string name="dressing_my_decor">Мой декор</string>

    <string name="inventory_title">Инвентарь</string>
    <string name="inventory_sum">Общая сумма:</string>
    <string name="inventory_hint">Добавьте первые элементы дизайна, перейдя на вкладку "каталог"</string>

    <string name="catalog_detail">Детали</string>


</resources>
