<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/select_design_galery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_design_galery"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:drawableTop="@drawable/ic_galery"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_design_template"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/select_design_camera"/>

    <TextView
            android:id="@+id/select_design_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_design_camera"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:drawableTop="@drawable/ic_photo_camera"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/select_design_ar"
            app:layout_constraintStart_toEndOf="@+id/select_design_galery"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/select_design_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_design_template"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/ic_template"
            app:layout_constraintStart_toStartOf="@+id/select_design_galery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_design_galery"
            app:layout_constraintEnd_toEndOf="@+id/select_design_galery"/>

    <TextView
            android:id="@+id/select_design_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_design_ar"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:drawableTop="@drawable/ic_ar"
            app:layout_constraintStart_toStartOf="@+id/select_design_camera"
            app:layout_constraintEnd_toEndOf="@+id/select_design_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_design_camera"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>