<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/black_30"
        android:padding="20dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/background_light_grey"
            android:clickable="true"
            android:focusable="true"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/filter_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="Cброс"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>


        <ImageView
                android:id="@+id/filter_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete"
                tools:ignore="ContentDescription"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/filter_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33"/>

        <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/grey"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/filter_guideline"
                app:layout_constraintTop_toBottomOf="@+id/filter_close"
                app:layout_constraintBottom_toTopOf="@+id/create_design"/>

        <TextView
                android:id="@+id/filter_price_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_price_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_close"
                app:layout_constraintBottom_toTopOf="@+id/filter_color_title"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"/>

        <TextView
                android:id="@+id/filter_price_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1000"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_price_seekbar"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/filter_price_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_price_seekbar"
                app:layout_constraintEnd_toStartOf="@+id/filter_price_to"
                app:layout_constraintStart_toEndOf="@+id/filter_price_from"/>

        <TextView
                android:id="@+id/filter_price_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_price_seekbar"
                app:layout_constraintStart_toStartOf="@+id/filter_guideline"
                android:layout_marginStart="8dp"/>

        <SeekBar
                android:id="@+id/filter_price_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="0"
                app:layout_constraintStart_toEndOf="@+id/filter_guideline"
                app:layout_constraintBottom_toBottomOf="@+id/filter_price_title"
                app:layout_constraintTop_toTopOf="@+id/filter_price_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>


        <TextView
                android:id="@+id/filter_color_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_color_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_price_title"
                app:layout_constraintBottom_toTopOf="@+id/filter_sort_title"
        />

        <View
                android:id="@+id/filter_color_example"
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"
                android:layout_marginEnd="8dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/filter_color_title"
                app:layout_constraintTop_toTopOf="@+id/filter_color_title"
                app:layout_constraintStart_toEndOf="@+id/filter_color_title" android:layout_marginStart="8dp"/>


        <com.divyanshu.colorseekbar.ColorSeekBar
                android:id="@+id/filter_color_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:colorSeeds="@array/filter_color_array"
                app:layout_constraintTop_toTopOf="@+id/filter_color_title"
                app:layout_constraintBottom_toBottomOf="@+id/filter_color_title"
                app:layout_constraintStart_toEndOf="@+id/filter_guideline"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/filter_sort_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_sort_by_price_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_color_title"
                app:layout_constraintBottom_toTopOf="@+id/filter_width_title"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"/>

        <TextView
                android:id="@+id/filter_from_high_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_from_high"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/filter_sort_title"
                app:layout_constraintBottom_toBottomOf="@+id/filter_sort_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/filter_from_low_btn"/>

        <TextView
                android:id="@+id/filter_from_low_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_from_low"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/filter_from_high_btn"
                app:layout_constraintTop_toTopOf="@+id/filter_sort_title"
                app:layout_constraintBottom_toBottomOf="@+id/filter_sort_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>


        <TextView
                android:id="@+id/filter_width_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_width_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_sort_title"
                app:layout_constraintBottom_toTopOf="@+id/filter_height_title"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"/>

        <TextView
                android:id="@+id/filter_width_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="1000"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_width_seekbar"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/filter_width_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_width_seekbar"
                app:layout_constraintEnd_toStartOf="@+id/filter_width_to"
                app:layout_constraintStart_toEndOf="@+id/filter_width_from"/>

        <TextView
                android:id="@+id/filter_width_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_width_seekbar"
                app:layout_constraintStart_toStartOf="@+id/filter_guideline"
                android:layout_marginStart="8dp"/>

        <SeekBar
                android:id="@+id/filter_width_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="0"
                app:layout_constraintStart_toEndOf="@+id/filter_guideline"
                app:layout_constraintBottom_toBottomOf="@+id/filter_width_title"
                app:layout_constraintTop_toTopOf="@+id/filter_width_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/filter_height_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_height_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_width_title"
                app:layout_constraintBottom_toTopOf="@+id/filter_length_title"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"/>

        <TextView
                android:id="@+id/filter_height_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1000"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_height_seekbar"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/filter_height_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_height_seekbar"
                app:layout_constraintEnd_toStartOf="@+id/filter_height_to"
                app:layout_constraintStart_toEndOf="@+id/filter_height_from"/>

        <TextView
                android:id="@+id/filter_height_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_height_seekbar"
                app:layout_constraintStart_toStartOf="@+id/filter_guideline"
                android:layout_marginStart="8dp"/>

        <SeekBar
                android:id="@+id/filter_height_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="0"
                app:layout_constraintStart_toEndOf="@+id/filter_guideline"
                app:layout_constraintBottom_toBottomOf="@+id/filter_height_title"
                app:layout_constraintTop_toTopOf="@+id/filter_height_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/filter_length_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/filter_length_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/filter_height_title"
                app:layout_constraintBottom_toTopOf="@+id/create_design"
                app:layout_constraintEnd_toStartOf="@+id/filter_guideline"/>


        <TextView
                android:id="@+id/filter_length_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1000"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_length_seekbar"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/filter_length_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_length_seekbar"
                app:layout_constraintEnd_toStartOf="@+id/filter_length_to"
                app:layout_constraintStart_toEndOf="@+id/filter_length_from"/>

        <TextView
                android:id="@+id/filter_length_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/filter_length_seekbar"
                app:layout_constraintStart_toStartOf="@+id/filter_guideline"
                android:layout_marginStart="8dp"/>

        <SeekBar
                android:id="@+id/filter_length_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="60"
                android:progress="0"
                app:layout_constraintStart_toEndOf="@+id/filter_guideline"
                app:layout_constraintBottom_toBottomOf="@+id/filter_length_title"
                app:layout_constraintTop_toTopOf="@+id/filter_length_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/create_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:padding="8dp"
                android:text="@string/filter_apply_btn"
                android:textColor="@color/black"
                android:background="@drawable/bkgd_round_white_button"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>